# Convert_MATLAB_to_C

./: CMakeLists.txt  README.md  adder.c  adder.h  adder_initialize.c  adder_initialize.h  adder_terminate.c  adder_terminate.h  adder_types.h  buildInfo.mat  main.c  main.h  rtw_proj.tmw  rtwtypes.h
CrossCorrelation/: CMakeLists.txt  crossCorr.c  crossCorr.h  crossCorr_initialize.c  crossCorr_initialize.h  crossCorr_terminate.c  crossCorr_terminate.h  crossCorr_types.h  main.c  main.h  rtwtypes.h
MATLAB Code/: adder.m  test.m
